discussion/kv_engine/186886/186886_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: TimingsTest for values > max tracked

Change-Id: I8ec46eff15304b16f7fe4ed2d0170c87afb945e9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-17 10:58:20.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-17 10:58:35.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338553/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-17 11:51:38.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1189/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:30: error: no member named "testing" in the global namespace [clang-diagnostic-error]
class TimingsTest : public ::testing::Test {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:39: error: expected class name [clang-diagnostic-error]
class TimingsTest : public ::testing::Test {
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:22:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(TimingsTest, Overflow) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:22:21: error: unknown type name "Overflow" [clang-diagnostic-error]
TEST_F(TimingsTest, Overflow) {
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:25:5: error: use of undeclared identifier "timings" [clang-diagnostic-error]
    timings.collect(cb::mcbp::ClientOpcode::Get, 1ms);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:27:13: error: use of undeclared identifier "timings" [clang-diagnostic-error]
            timings.get_timing_histogram(uint8_t(cb::mcbp::ClientOpcode::Get));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:34:5: error: use of undeclared identifier "timings" [clang-diagnostic-error]
    timings.collect(cb::mcbp::ClientOpcode::Get, maxTracked * 2);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1189/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:30:
error: no member named "testing" in the global namespace [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1189/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1430/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/daemon/timings_test.cc(40): error: Expected: (json.end()) != (overflowed), actual: 32-byte object <20-F1 B0-5C 3C-00 00-00 70-1C 9B-68 10-02 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <20-F1 B0-5C 3C-00 00-00 70-1C 9B-68 10-02 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1430/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1217/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:31:16.741Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:31:16.741Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <70-16 06-02 FC-7F 00-00 88-64 14-D6 4A-7F 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <70-16 06-02 FC-7F 00-00 88-64 14-D6 4A-7F 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:31:16.741Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1217/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1219/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:19:46.494Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:19:46.494Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <98-9D C0-ED FF-FF 00-00 68-E3 E9-8A FF-FF 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <98-9D C0-ED FF-FF 00-00 68-E3 E9-8A FF-FF 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:19:46.494Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1219/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1215/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:38:02.055Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:38:02.055Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <80-59 1C-55 FD-7F 00-00 C8-1B 00-00 0C-7B 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <80-59 1C-55 FD-7F 00-00 C8-1B 00-00 0C-7B 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:38:02.055Z] [  FAILED  ] TimingsTest.Overflow (3 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1215/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1547/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:23:18.860Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:23:18.860Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <08-67 11-E4 FE-7F 00-00 48-63 61-12 01-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <08-67 11-E4 FE-7F 00-00 48-63 61-12 01-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:23:18.860Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1547/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1209/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:38:17.579Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:38:17.579Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <20-41 A2-A6 FD-7F 00-00 18-EB 01-00 40-60 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <20-41 A2-A6 FD-7F 00-00 18-EB 01-00 40-60 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:38:17.579Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1209/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1209/ )

Test exceeded the timeout:
[2023-02-17T11:42:40.940Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1209/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1207/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-17T11:49:32.580Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/daemon/timings_test.cc:40: Failure
[2023-02-17T11:49:32.580Z] Expected: (json.end()) != (overflowed), actual: 32-byte object <70-6F 15-81 FF-7F 00-00 F8-93 74-FC 1C-7F 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80> vs 32-byte object <70-6F 15-81 FF-7F 00-00 F8-93 74-FC 1C-7F 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-00 00-80>
[2023-02-17T11:49:32.580Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1207/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1151/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22801/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1181/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
